# drogone-rmp

./: README.md
analyzation/: analyze_softmax.py  analyze_target_policy.py  analyze_trajectory.py  analyze_vel.py
drogone_rmp/: CMakeLists.txt  package.xml
drogone_rmp/cfg/: peregrine_params.yaml
drogone_rmp/include/drogone_rmp/: rmp.h  rmpcpp_example.h
drogone_rmp/launch/: rmp.launch
drogone_rmp/src/: rmp.cpp  rmp_node.cpp  rmpcpp_example.cpp
drogone_simulation/: CMakeLists.txt  README.md  package.xml
drogone_simulation/cfg/: check_for_catch_params.yaml  firefly.xacro  rviz_view.rviz  rviz_view_firefly.rviz  rviz_view_firefly_backup.rviz  rviz_view_pctrs.rviz  rviz_view_peregrine.rviz
drogone_simulation/include/drogone_simulation/: check_for_catch.h  visualization.h
drogone_simulation/launch/: RMP_sim.launch  simulationMPC.launch
drogone_simulation/src/: back_to_position_hold_server.cpp  check_for_catch.cpp  visualization.cpp
evaluation/: 3d_plot_problem.py  appendix_follow_create.py  convert2vid.py  distance_presentation.py  error_evaluation.py  eval_d2g_live.py  eval_follow_live.py  eval_recover_live.py  evaluate_distance_noise_func.py  evaluation.py  evaluation.yaml  plot_all_points_follow.py  traj_eval.py
huenli_world/: CMakeLists.txt  package.xml
huenli_world/launch/: simulation.launch
huenli_world/models/huenliwald_mesh/: model.config  model.sdf
huenli_world/models/huenliwald_mesh/materials/: backfaceculling.material
huenli_world/worlds/: huenliwald.world
libs/drogone_action_rmp/: CMakeLists.txt  package.xml
libs/drogone_action_rmp/action/: FSM.action
libs/drogone_msgs_rmp/: CMakeLists.txt  package.xml
libs/drogone_msgs_rmp/msg/: AccFieldUV.msg  AccFieldWithState.msg  AnalyzePolicy.msg  CameraUV.msg  noise.msg  target_detection.msg
libs/drogone_transformation_lib/: CMakeLists.txt  package.xml
libs/drogone_transformation_lib/include/drogone_transformation_lib/: camera_constraints.h  transformations.h  world_to_camera.h
libs/drogone_transformation_lib/src/: transformations.cpp  world_to_camera.cpp
nodes/drogone_dummy_detector/: CMakeLists.txt  package.xml
nodes/drogone_dummy_detector/cfg/: firefly_camera_params.yaml  peregrine_camera_params.yaml
nodes/drogone_dummy_detector/include/drogone_dummy_detector/: dummy_detector.h
nodes/drogone_dummy_detector/launch/: dummy_detector.launch
nodes/drogone_dummy_detector/src/: dummy_detector.cpp  dummy_detector_node.cpp
nodes/drogone_fsm/: CMakeLists.txt  README.md  package.xml
nodes/drogone_fsm/launch/: FSM.launch
nodes/drogone_fsm/src/: ActionState_Simulation.py  GUI_Outdoor.py  GUI_Simulation.py  map.py
nodes/drogone_motion_planner/: CMakeLists.txt  package.xml
nodes/drogone_motion_planner/cfg/: firefly_planner_params.yaml  peregrine_planner_params.yaml
nodes/drogone_motion_planner/include/drogone_motion_planner/: camera_target_policy.h  cart_cam_geom.h  distance2ground_geom.h  distance2ground_policy.h  distance2ground_target_policy.h  distance_geom.h  distance_target_policy.h  rmp_planner.h  simple_camera_target_policy.h  simple_distance_target_policy.h  simple_xy_target_policy.h  trapezoidal_integrator.h  x_geom.h  y_geom.h
nodes/drogone_motion_planner/launch/: drogone_rmp_planner.launch
nodes/drogone_motion_planner/src/: rmp_planner.cpp  rmp_planner_node.cpp
nodes/drogone_rmp/cfg/: peregrine_params_old.yaml
nodes/drogone_rmp/src/: rmpcpp_example_node.cpp
nodes/drogone_victim_drone/: CMakeLists.txt  README.md  package.xml
nodes/drogone_victim_drone/launch/: victim_drone.launch
nodes/drogone_victim_drone/src/: victim_drone.py
