<?xml version="1.0"?>
<package format="2">
  <name>drogone_rmp</name>
  <version>0.0.0</version>
  <description> RMP by DroGone </description>

  <author email="lucastr@student.ethz.ch">Luca Strässle</author>
  <maintainer email="lucastr@student.ethz.ch">Luca Strässle</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>mav_msgs</depend>
  <depend>mav_visualization</depend>
  <depend>mav_planning_msgs</depend>
  <depend>eigen_checks</depend>
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rmpcpp</depend>
</package>
