<?xml version="1.0"?>
<package format="2">
  <name>drogone_simulation</name>
  <version>0.0.0</version>
  <description>nodes needed for Simulation in rviz and gazebo</description>

  <maintainer email="fstadler@ethz.ch">felixstadler</maintainer>
  <author email="fstadler@ethz.ch">felixstadler</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- packages for back_to_position_hold -->
  <depend>std_srvs</depend>

  <!-- packages for communication with FSM (check for catch ) -->
  <depend>drogone_action</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>

  <!-- packages for visualization.cpp, especially for the visualization markers -->
  <depend>trajectory_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>drogone_msgs</depend>
  <depend>mav_planning_msgs</depend>
  <depend>mav_visualization</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_trajectory_generation_ros</depend>

</package>
