<?xml version="1.0"?>
<package format="2">
    <name>huenli_world</name>
    <version>0.0.1</version>
    <description>huenli_world</description>

    <author email="mpantic@ethz.ch">Michael Pantic</author>
    <maintainer email="mpantic@ethz.ch">Michael Pantic</maintainer>
 

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <test_depend>rosunit</test_depend>

    <depend>roscpp</depend>
</package>
