<package format="2">
  <name>drogone_action_rmp</name>
  <version>0.0.0</version>
  <description>package with all the action files for DroGone</description>

  <maintainer email="fstadler@ethz.ch">felixstadler</maintainer>
  <author email="fstadler@ethz.ch">felixstadler</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>

</package>
