<?xml version="1.0"?>
<package format="2">
  <name>drogone_msgs_rmp</name>
  <version>0.0.0</version>
  <description>
    Messages for RMP Bachelor Thesis for DroGone.
  </description>

  <maintainer email="lucastr@student.ethz.ch">Luca Straessle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>std_msgs</depend>  
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
