<package format="2">
  <name>drogone_fsm</name>
  <version>0.0.0</version>
  <description>A package for the finite state machine.</description>

  <maintainer email="fstadler@ethz.ch">felixstadler</maintainer>
  <author email="fstadler@ethz.ch">felixstadler</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- ActionState packages -->
  <depend>smach</depend>
  <depend>drogone_action</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>

  <!-- GUI packages -->
  <depend>std_srvs</depend>

</package>
