<?xml version="1.0"?>
<package format="2">

  <name>drogone_motion_planner</name>
  <version>0.0.0</version>
  <description> Motion Planning by DroGone </description>

  <author email="lucastr@student.ethz.ch">Luca Strässle</author>
  <maintainer email="lucastr@student.ethz.ch">Luca Strässle</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>eigen_conversions</depend>

  <depend>mav_msgs</depend>
  <depend>mav_planning_msgs</depend>
  <depend>actionlib_msgs</depend>

  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>smach</depend>
  <depend>actionlib</depend>
  <depend>drogone_action_rmp</depend>
  <depend>drogone_msgs_rmp</depend>
  <depend>drogone_transformation_lib</depend>

  <depend>rmpcpp</depend>
  <depend>rmpcpp_ros</depend>

</package>
