<?xml version="1.0"?>
<package format="2">
  <name>drogone_victim_drone</name>
  <version>0.0.0</version>
  <description>Motion planning for victim drone </description>

  <maintainer email="fstadler@ethz.ch">felixstadler</maintainer>
  <author email="fstadler@ethz.ch">felixstadler</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
